feat: add backend server, bulk delete, and UI improvements

--- a/env.example
+++ b/env.example
@@ -22,13 +22,31 @@ GMAIL_REFRESH_TOKEN="your-gmail-refresh-token"
 # Email to monitor (the inbox to check for documents)
 GMAIL_USER_EMAIL="your-email@gmail.com"
 
-# Notification Email Settings (SMTP)
+# ===========================================
+# Email Notification Settings
+# ===========================================
+# Provider: "ses" (AWS SES, recommended) or "smtp" (legacy Gmail)
+EMAIL_PROVIDER="ses"
+
+# Email addresses
+EMAIL_FROM="your-email@example.com"
+NOTIFICATION_EMAIL="where-to-send-notifications@example.com"
+
+# AWS SES Settings (uses AWS credentials above)
+# Region for SES (defaults to AWS_REGION if not set)
+AWS_SES_REGION="us-east-2"
+
+# SMTP Settings (only needed if EMAIL_PROVIDER="smtp")
+# Requires Gmail App Password - see README for setup
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER="your-email@gmail.com"
 SMTP_PASS="your-app-password"
-NOTIFICATION_EMAIL="notifications@example.com"
 
 # Agent Settings
 POLLING_INTERVAL_MS=60000
-GOOGLE_API_KEY="your-google-ai-api-key"
+
+# Google AI API Key (for Gemini model in ADK)
+# Get from: https://aistudio.google.com/app/apikey
+# ADK looks for GOOGLE_GENAI_API_KEY or GEMINI_API_KEY
+GOOGLE_GENAI_API_KEY="your-google-ai-api-key"
