--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
+    "server": "ts-node src/server.ts",
+    "process": "ts-node src/scripts/process-email-manual.ts",
     "test:flow": "ts-node src/scripts/test-flow.ts",
     "setup:gmail": "ts-node src/scripts/setup-gmail-oauth.ts",
     "db:generate": "prisma generate",
@@ -24,16 +26,21 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.969.0",
+    "@aws-sdk/client-ses": "^3.969.0",
     "@aws-sdk/client-textract": "^3.500.0",
-    "@google/adk": "^0.1.0",
+    "@google/adk": "^0.2.2",
     "@prisma/client": "^5.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "express": "^5.2.1",
     "googleapis": "^130.0.0",
     "nodemailer": "^6.9.8",
     "pdfkit": "^0.17.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/node": "^20.11.0",
     "@types/nodemailer": "^6.4.14",
     "@types/pdfkit": "^0.17.4",
