feat: integrar Gemini AI al chat con fallback automatico
- Agregar integracion directa con Gemini API (sin ADK)
- Implementar fallback automatico cuando quota agotada (429)
- Mostrar badge visual indicando fuente (Gemini AI / Respuesta local)
- Reintentar Gemini automaticamente despues de 60 segundos
- Agregar contexto de BD a las respuestas de Gemini
- Actualizar store con estado de Gemini
- Agregar documentacion de costos (ANALISIS_COSTOS.md)
- Mejorar UI del chat con colores diferenciados

--- a/env.example
+++ b/env.example
@@ -50,3 +50,13 @@ POLLING_INTERVAL_MS=60000
 # Get from: https://aistudio.google.com/app/apikey
 # ADK looks for GOOGLE_GENAI_API_KEY or GEMINI_API_KEY
 GOOGLE_GENAI_API_KEY="your-google-ai-api-key"
+
+# ===========================================
+# Multi-user Settings
+# ===========================================
+# Allowed email domains (comma-separated)
+ALLOWED_DOMAINS="mobeats.io"
+
+# Encryption key for storing OAuth tokens (exactly 32 characters)
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('base64').slice(0,32))"
+ENCRYPTION_KEY="your-32-character-encryption-key"
