feat: add automatic email processing with Gmail Push notifications
- Add Gmail Watch service for Pub/Sub integration
- Add email processor service with triple duplicate protection
- Add webhook endpoint for Gmail push notifications
- Auto-start watch when user connects Gmail
- Add auto-refresh in dashboard (30s polling)
- Update README with new architecture and endpoints
- Add GMAIL_PUSH_SETUP.md documentation

--- a/env.example
+++ b/env.example
@@ -60,3 +60,15 @@ ALLOWED_DOMAINS="mobeats.io"
 # Encryption key for storing OAuth tokens (exactly 32 characters)
 # Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('base64').slice(0,32))"
 ENCRYPTION_KEY="your-32-character-encryption-key"
+
+# ===========================================
+# Gmail Push Notifications (Pub/Sub)
+# ===========================================
+# Google Cloud Project ID (same as Gmail OAuth project)
+GOOGLE_CLOUD_PROJECT_ID="your-google-cloud-project-id"
+
+# Pub/Sub Topic Name (create in Google Cloud Console)
+PUBSUB_TOPIC_NAME="gmail-notifications"
+
+# Backend URL (for webhook endpoint)
+BACKEND_URL="http://localhost:3000"
