feat(observability): separate worker metrics on port 9465 and aggregate in Grafana

--- a/env.example
+++ b/env.example
@@ -72,3 +72,21 @@ PUBSUB_TOPIC_NAME="gmail-notifications"
 
 # Backend URL (for webhook endpoint)
 BACKEND_URL="http://localhost:3000"
+
+# ===========================================
+# Queue Settings (BullMQ + Redis)
+# ===========================================
+# Redis connection
+REDIS_HOST="localhost"
+REDIS_PORT=6379
+# REDIS_PASSWORD=""  # Optional, for production
+
+# Queue mode: true = async queue (default), false = sync processing
+USE_QUEUE=true
+
+# Worker concurrency settings
+EMAIL_WORKER_CONCURRENCY=2
+ATTACHMENT_WORKER_CONCURRENCY=3
+
+# Worker metrics port (separate from server)
+WORKER_METRICS_PORT=9465
