--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "server": "ts-node src/server.ts",
+    "server:traced": "ENABLE_TRACING=true ts-node -r ./src/tracing-bootstrap.ts src/server.ts",
+    "server:sync": "USE_QUEUE=false ts-node src/server.ts",
+    "worker": "ts-node src/worker.ts",
+    "worker:dev": "ts-node-dev --respawn src/worker.ts",
     "process": "ts-node src/scripts/process-email-manual.ts",
     "test:flow": "ts-node src/scripts/test-flow.ts",
     "setup:gmail": "ts-node src/scripts/setup-gmail-oauth.ts",
@@ -28,15 +32,31 @@
     "@aws-sdk/client-s3": "^3.969.0",
     "@aws-sdk/client-ses": "^3.969.0",
     "@aws-sdk/client-textract": "^3.500.0",
+    "@bull-board/api": "^6.16.2",
+    "@bull-board/express": "^6.16.2",
     "@google/adk": "^0.2.2",
     "@google/generative-ai": "^0.24.1",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.68.0",
+    "@opentelemetry/exporter-prometheus": "^0.210.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.210.0",
+    "@opentelemetry/instrumentation-express": "^0.58.0",
+    "@opentelemetry/instrumentation-http": "^0.210.0",
+    "@opentelemetry/instrumentation-pg": "^0.62.0",
+    "@opentelemetry/sdk-metrics": "^2.4.0",
+    "@opentelemetry/sdk-node": "^0.210.0",
+    "@opentelemetry/sdk-trace-node": "^2.4.0",
     "@prisma/client": "^5.10.0",
+    "bullmq": "^5.66.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^5.2.1",
     "googleapis": "^130.0.0",
     "nodemailer": "^6.9.8",
     "pdfkit": "^0.17.2",
+    "pino": "^10.2.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -45,6 +65,7 @@
     "@types/node": "^20.11.0",
     "@types/nodemailer": "^6.4.14",
     "@types/pdfkit": "^0.17.4",
+    "@types/pino-http": "^5.8.4",
     "prisma": "^5.10.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
